# ibis-parser

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: basic_usage.py
ibis_parser/: __init__.py  __main__.py  parser.py
tests/: sample.ibs  test_parser.py
